Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern



// Funções

DllImport int ECF_AbreCupom(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_DestroyDadosReducaoZClass(const INTPTR ecfHandle, INTPTR* dadosRZ);

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetCliche(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetCNPJ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDadosReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDadosReducaoZClass(const INTPTR ecfHandle, INTPTR* dadosRZ);

DllImport int ECF_GetDadosUltimaReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDataHoraSB(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDataMovimento(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDecimaisPreco(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisQtd(const INTPTR ecfHandle);

DllImport int ECF_GetDescricaoGrande(const INTPTR ecfHandle);

DllImport int ECF_GetEmLinha(const INTPTR ecfHandle, const int timeOut);

DllImport int ECF_GetEstado(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaAberta(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaSinalInvertido(const INTPTR ecfHandle);

DllImport int ECF_GetGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const INTPTR ecfHandle);

DllImport int ECF_GetIE(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIM(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIntervaloAposComando(const INTPTR ecfHandle);

DllImport int ECF_GetLinhasEntreCupons(const INTPTR ecfHandle);

DllImport int ECF_GetMFD(const INTPTR ecfHandle);

DllImport int ECF_GetModeloStr(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCCF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCDC(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOO(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRO(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCupom(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumLoja(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumSerie(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumUltItem(const INTPTR ecfHandle);

DllImport int ECF_GetNumVersao(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetOperador(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPAF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPoucoPapel(const INTPTR ecfHandle);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubModeloECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTotalAcrescimos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalAcrescimosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencaoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetUsuarioAtual(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetVendaBruta(const INTPTR ecfHandle, double* value);

DllImport int ECF_IdentificaConsumidor(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_SetAAC(const INTPTR ecfHandle, const INTPTR aacHandle);

DllImport int ECF_SetDecimaisPreco(const INTPTR ecfHandle, const int decimaisPreco);

DllImport int ECF_SetDecimaisQtd(const INTPTR ecfHandle, const int decimaisQtd);

DllImport int ECF_SetDescricaoGrande(const INTPTR ecfHandle, const BOOL descricaoGrande);

DllImport int ECF_SetEAD(const INTPTR ecfHandle, const INTPTR eadHandle);

DllImport int ECF_SetGavetaSinalInvertido(const INTPTR ecfHandle, const BOOL gavetaSinalInvertido);

DllImport int ECF_SetIntervaloAposComando(const INTPTR ecfHandle, const int intervalo);

DllImport int ECF_SetLinhasEntreCupons(const INTPTR ecfHandle, const int linhasEntreCupons);

DllImport int ECF_SetOperador(const INTPTR ecfHandle, const PCHAR operador);